# repeater_roundabout

./: .flake8  .gitignore  CNAME  Dockerfile  LICENSE  README.md  _config.yml  azimuth.html  azimuthal_map.md  demo_map.html  files.md  generate_chirp_csv.py  index.md  logging.md  map.html  map.md  package-lock.json  package.json  pyproject.toml  repeaters.md  requirements.txt  requirements_stats.txt  rr_frequencies.csv  rules.md  slides.md  spectrum-test.html  submit_logs.md  test.ipynb  tsconfig.json
.github/: test_crlf.py
.github/workflows/: verify_d878_line_endings.yml
2023/: repeaters.json
2023/results/: AG7LR.md  AI7OZ.md  K7CX.md  K7RMZ.md  K7XTN.md  K9BDC.md  KB7RYY.md  KB8BMY.md  KD7WNV.md  (+14 more)
2024/: repeaters.json
_data/: navigation.yml
_includes/: leaflet.html
assets/: d878.csv  repeaters copy.json  repeaters.json  repeaters_template.md  rr_frequencies.csv
results/: AA7RM.csv  AA7RM.md  AB6MB.md  AE7JY.md  AG7LR.md  AI7OZ.md  K3TZZ.md  K7CX.csv  K7CX.md  K7DRQ.md  K7WFB.md  K7XTN.csv  K7XTN.md  KB7SDM.md  KB8BMY.csv  KB8BMY.md  KE7NOR.md  KG7ODB.md  KG7WFQ.md  KI6KTE.md  KI7AUH.RR.2024.md  KI7AUH.md  KI7HSG.csv  KI7HSG.md  KI7RMU.md  KI7YFP.csv  KI7YFP.md  KJ7FIF.md  KK7EV.md  KK7NZY.md  KK7PBZ.md  KK7PDR.md  KK7PMI.csv  KK7PMI.md  KK7QLW.md  KK7TUE.md  KK7UUM.csv  KK7UUM.md  KK7WID.csv  KK7WID.md  (+16 more)
scripts/: add_repeater.py  docker-entrypoint.sh  generate_chirp_csv.py  map_pin.py  markdown_files.py  programming_files.py  score.py  setup-venv.sh  stats.py  update.py
src/: bands.ts  spectra-control.ts  spectrum-customizer.ts  spectrum.ts  tabs.ts
(+43 files in other folders)
